# pi-topd

./: .gitignore  .gitmodules  .pre-commit-config.yaml  Jenkinsfile  MANIFEST.in  README.md  README.rst  setup.cfg  setup.py  sys_config.py
.tests/: pt-device-manager-req-test  test_app.py  test_ptdm_controller.py  test_ptdm_system_config_file_manager.py
config/: xhost-setup
debian/: changelog  changelog''  control  copyright  files  pi-topd.install  pi-topd.lintian-overrides  pi-topd.postinst  pi-topd.service  pi-topd.triggers  postinst  preinst  prerm  pt-capture-reboot.service  pt-desktop-message-service.service  pt-device-cli-utils.install  pt-device-cli-utils.lintian-overrides  pt-device-manager.install  pt-device-manager.lintian-overrides  pt-device-manager.postinst  pt-device-manager.preinst  pt-device-manager.service  pt-device-manager.substvars  pt-device-manager.triggers  pt-oled-startup-anim.install  pt-oled-startup-anim.service  pt-poweroff-legacy.service  pt-poweroff-v1.service  pt-poweroff-v2.service  pt-poweroff-v3.service  pt-poweroff.service  pt-poweroff@.service  pt-reboot.service  pt-xhost-fix.service  py3dist-overrides  rules
docs/: README.md  more-info.md
pi-topd/: poweroff  poweroff-legacy  pt-device-manager  pt-poweroff  pt-reboot  ptdm_config_manager.py  ptdm_hub_manager.py  ptdm_idle_monitor.py  ptdm_notification_manager.py  ptdm_peripheral_manager.py  ptdm_power_manager.py  ptdm_publish_server.py  ptdm_request_server.py  sys_config.py
pitopd/: __main__.py  app.py  config_manager.py  config_parser.py  controller.py  event.py  i2s.py  (+14 more)
(+122 files in other folders)
