[metadata]
name = pitopd
version = 5.0.0
description = pi-top System Daemon
long_description = file: README.rst
long_description_content_type = text/x-rst
author = pi-top (CEED Ltd)
author_email = os-dev@pi-top.com
url = https://github.com/pi-top/pi-topd
license = Apache-2.0
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python :: 3.9

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.9, <4
install_requires =
    click>=7.1.2,<7.2.0
    pitop>=0.19.0,<0.20.0
    smbus2>=0.4.0,<0.5.0
    spidev>=3.5<3.6
    # For journal logging
    systemd-python>=234,<235
    # Device Communication
    pyzmq>=20.0.0,<21.0.0


[options.package_data]
* = *.mp3, *.restore

[options.entry_points]
console_scripts =
    pi-topd = pitopd.__main__:main
    pt-reboot = pitopd.__main__:reboot
    pt-poweroff = pitopd.__main__:poweroff
    

[bdist_wheel]
universal = 1

[flake8]
per-file-ignores =
    __init__.py: F401
    test_*: E402
# https://black.readthedocs.io/en/stable/faq.html#why-are-flake8-s-e203-and-w503-violated
extend-ignore = E203
max-line-length = 150

[isort]
profile = black

[pep8]
max-line-length = 150
